# devmons

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  Makefile  README.md  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.yaml  docker-compose.yml  pyproject.toml
src/devmons/: __init__.py  app.py  coingecko.py  db.py  dependency.py  first.py  orm.py  repository.py  services.py  settings.py  test.py  users.py  utils.py
src/vce/: app.py
