[project]
name = "devmons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Miroslav Mlynarik", email = "miroslav.mlynarik@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "psycopg2-binary>=2.9.10",
]

[project.scripts]
devmons = "devmons:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]
