[project]
name = "devmons"
version = "0.1.0"
description = "Devmons interview project"
readme = "README.md"
authors = [
    { name = "Miroslav Mlynarik", email = "miroslav.mlynarik@gmail.com" }
]
requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]

[project.scripts]
devmons = "devmons:main"

[build-system]
requires = ["uv"]
build-backend = "uv"

[tool.ruff]
line-length = 110
exclude = ["experimental/", ".venv"]

[tool.black]
line-length = 110

[tool.isort]
profile = "black"
line_length = 110

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
strict_equality = false
exclude = ["^notebooks/", "migrations/"]
